Replace deprecated URl constructor